--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Allison Krinsky - Product Manager at JPMorgan Chase building AI platforms. Empowering ambitious young women in tech through direct, actionable career advice." />
-    <meta property="og:title" content="Allison Krinsky - AI Product Manager" />
+    <meta property="og:title" content="Allison Krinsky - Product Manager" />
     <meta property="og:description" content="Product Manager at JPMorgan Chase. Helping ambitious young women navigate tech careers with intention." />
     <meta property="og:type" content="website" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
